# EnTT-Snake

./: .gitignore  CMakeLists.txt  main.cpp
engine/include/: Engine.h  Entity.h  Logger.h  Scene.h  SceneManager.h  Vector2.h
engine/include/Components/CustomComponent/: CustomComponent.h  PlayerMovement.h
engine/include/Components/Engine/: BoxCollider.h  Component.h  PlayerInput.h  ScriptableComponent.h  SpriteRenderer.h  Transform.h
engine/src/: Engine.cpp  Entity.cpp  Logger.cpp  Scene.cpp  SceneManager.cpp
engine/src/Components/Engine/: BoxCollider.cpp  SpriteRenderer.cpp
game/: main.cpp
game/include/: Apple.h  SnakeEntity.h  SnakeGame.h
game/include/Components/: MoveOnCollision.h
game/include/Scenes/: MainMenuScene.h  PlayingScene.h
game/src/: Apple.cpp  SnakeGame.cpp
game/src/Scenes/: MainMenuScene.cpp  PlayingScene.cpp
include/: Apple.h  BoxCollider.h  Entity.h  SceneManager.h  SnakeEntity.h  SnakeGame.h  State.h  StateMachine.h  WindowProperties.h
include/Components/: Collider.h  Component.h  PlayerInput.h  PlayerMovement.h  SpriteRenderer.h  Transform.h  Updateable.h
include/Components/CustomComponent/: CustomComponent.h  PlayerMovement.h
include/Components/Engine/: BoxCollider.h  Component.h  PlayerInput.h  ScriptableComponent.h  SpriteRenderer.h  Transform.h
include/Scenes/: PlayingScene.h
include/States/: MainMenuState.h  PlayingState.h
src/: Apple.cpp  Entity.cpp  Scene.cpp  SceneManager.cpp  SnakeEntity.cpp  SnakeGame.cpp  State.cpp  StateMachine.cpp
src/States/: MainMenuState.cpp  PlayingState.cpp
